# Swing-Sync

./: .gitignore  Planning.md  README.md  docker-compose.yml  hello.py  package-lock.json  pyproject.toml
backend/: .env  API_DOCS.md  Dockerfile.dev
backend/api/: chat_bot.py  forms.py  middleware.py  models.py  ollama_chat.py  ollama_vision.py  serializers.py  tasks.py  views.py
backend/backend/: __init__.py  celery.py  settings.py  urls.py
backend/myenv/: pyvenv.cfg
conf/conf/: settings.py  urls.py
conf/swing_sync/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
conf/swing_sync/migrations/: 0001_initial.py
conf/swing_sync/templates/: account.html  base.html  home.html  login.html
docker/: Dockerfile.ollama
frontend/: .env  Dockerfile.dev  index.html  package-lock.json  package.json
frontend/src/: App.jsx  Radar.jsx  data.js  main.jsx
frontend/src/components/: Radar.jsx  Woody-AiBanner.jsx
frontend/src/layouts/: LeaderBoard.jsx  account.jsx  signin.jsx  signup.jsx
frontend/src/layouts/Radar chart/: RadarChart.jsx  RadarGrid.tsx  data.jsx
frontend/src/layouts/Styles/: Inputstyle.css
frontend/src/layouts/components/: AppNavbar.jsx  ChartUserByCountry.jsx  CustomizedDataGrid.jsx  GridRounds.jsx  Header.jsx  HighlightedCard.jsx  (+17 more)
frontend/src/pages/: Add_rounds.jsx  AuthChatBot.jsx  Check.jsx  CourseDetails.jsx  LeaderBoard.jsx  SearchBarCourse.jsx  account.jsx  chatBot.jsx  chatService.js  leaderboard.jsx  signin.jsx  signup.jsx  theme.js  vision_chatbot.jsx
frontend/src/services/: courseApi.jsx
scripts/: setup-ollama.sh
(+6 files in other folders)
